[Media Session] Listen to WebContents muted state

Listen to the WebContents muted state in MediaSession. If
the WebContents is muted then we should act as if the
player has no audio.

This stops muted tabs from getting audio focus.

BUG=863438

Change-Id: I8218f225cd79d8490a805d46ad4606829742dd5e
Reviewed-on: https://chromium-review.googlesource.com/1141144
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579459}
Former-commit-id: 8617ff7583076c0622dc3ca1d443d2665f247661