content/browser/media/media_web_contents_observer.h
@@ -79,6 +79,7 @@ class CONTENT_EXPORT MediaWebContentsObserver : public WebContentsObserver {
   bool OnMessageReceived(const IPC::Message& message,
                          RenderFrameHost* render_frame_host) override;
   void OnVisibilityChanged(content::Visibility visibility) override;
+  void DidUpdateAudioMutingState(bool muted) override;
 
   // TODO(zqzhang): this method is temporarily in MediaWebContentsObserver as
   // the effectively fullscreen video code is also here. We need to consider
