content/browser/media/session/media_session_controllers_manager.cc
@@ -95,4 +95,12 @@ void MediaSessionControllersManager::OnEnd(const MediaPlayerId& id) {
   controllers_map_.erase(id);
 }
 
+void MediaSessionControllersManager::WebContentsMutedStateChanged(bool muted) {
+  if (!IsMediaSessionEnabled())
+    return;
+
+  for (auto& entry : controllers_map_)
+    entry.second->WebContentsMutedStateChanged(muted);
+}
+
 }  // namespace content
